--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_native_splash: ^1.3.1
+  otp_text_field: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -74,10 +75,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+     - family: Lato
+       fonts:
+         - asset: fonts/Lato-Regular.ttf
+         - asset: fonts/Lato-Light.ttf
+           weight: 200
+         - asset: fonts/Lato-Thin.ttf
+           weight: 100
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
