--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter_native_splash: ^1.3.1
   otp_text_field: ^1.1.1
   font_awesome_flutter: ^9.2.0
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/party_icon.png
+    - assets/images/logo.png
+    - assets/images/search.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
